--- a/.mdtconfig
+++ b/.mdtconfig
@@ -1,13 +1,5 @@
-#
-# Configuration file for mdt (moodle deployment tools)
-#
-
-#
-# Our frankenstyle component name
-#
-mdt_component=local_dev
-
-#
-# Our path within the Moodle source code tree
-#
-mdt_relpath=local/dev/
+MDTSITE=moodle.org
+MDTVERSION=3.1
+MDTCOMPONENT=local_dev
+MDTRELPATH=local/dev/
+MDTEXPORT=origin/master
