--- a/.mdtconfig
+++ b/.mdtconfig
@@ -2,4 +2,4 @@ MDTSITE=moodle.org
 MDTVERSION=3.5
 MDTCOMPONENT=local_dev
 MDTRELPATH=local/dev/
-MDTEXPORT=origin/master
+MDTEXPORT=origin/MOODLE_35_STABLE
